tests/idris2/builtin/builtin008/expected
1/1: Building Test (Test.idr)
Error: More than 1 non-erased arguments found for finToInteger.

Test:11:1--11:39
 07 | finToInteger : {k : _} -> Fin k -> Integer
 08 | finToInteger FZ = 0
 09 | finToInteger (FS k) = 1 + finToInteger k
 10 |
 11 | %builtin NaturalToInteger finToInteger
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Main> Bye for now!
